chore: change figs path

--- a/book/lectures/aiart/imagen.ipynb
+++ b/book/lectures/aiart/imagen.ipynb
@@ -134,7 +134,7 @@
    "id": "cc9a8a3e",
    "metadata": {},
    "source": [
-    "![](../figs/deep_nlp/t5/t5.gif)"
+    "![](figs/t5.gif)"
    ]
   },
   {
