--- a/book/lectures/nlp_deep/transformers/byt5.ipynb
+++ b/book/lectures/nlp_deep/transformers/byt5.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cfdc61fb",
    "metadata": {
@@ -12,10 +13,11 @@
    "source": [
     "# ByT5: Towards a token-free future with pre-trained byte-to-byte models\n",
     "\n",
-    "![](../figs/deep_nlp/byt5/byt5-intro.png)"
+    "![](figs/byt5-intro.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ef336780",
    "metadata": {
@@ -29,10 +31,11 @@
     "\n",
     "The abstract from the paper is the following:\n",
     "\n",
-    "> Most widely-used pre-trained language models operate on sequences of tokens corresponding to word or subword units. Encoding text as a sequence of tokens requires a tokenizer, which is typically created as an independent artifact from the model. Token-free models that instead operate directly on raw text (bytes or characters) have many benefits: they can process text in any language out of the box, they are more robust to noise, and they minimize technical debt by removing complex and error-prone text preprocessing pipelines. Since byte or character sequences are longer than token sequences, past work on token-free models has often introduced new model architectures designed to amortize the cost of operating directly on raw text. In this paper, we show that a standard Transformer architecture can be used with minimal modifications to process byte sequences. We carefully characterize the trade-offs in terms of parameter count, training FLOPs, and inference speed, and show that byte-level models are competitive with their token-level counterparts. We also demonstrate that byte-level models are significantly more robust to noise and perform better on tasks that are sensitive to spelling and pronunciation. As part of our contribution, we release a new set of pre-trained byte-level Transformer models based on the T5 architecture, as well as all code and data used in our experiments."
+    "> Most widely-used pre-trained language models operate on sequences of tokens corresponding to word or subword units. Encoding text as a sequence of tokens requires a tokenizer, which is typically created as an independent artifact from the model. Token-free models that instead operate directly on raw text (bytes or characters) have many benefits: they can process text in any language out of the box, they are more robust to noise, and they minimize technical debt by removing complex and error-prone text preprocessing pipelines. Since byte or character sequences are longer than token sequences, past work on token-free models has often introduced new model architectures designed to amortize the cost of operating directly on raw text. In this paper, we show that a standard Transformer architecture can be used with minimal modifications to process byte sequences. We carefully characterize the trade-offs in terms of parameter count, training FLOPs, and inference speed, and show that byte-level models are competitive with their token-level counterparts. We also demonstrate that byte-level models are significantly more robust to noise and perform better on tasks that are sensitive to spelling and pronunciation. As part of our contribution, we release a new set of pre-trained byte-level Transformer models based on the T5 architecture, as well as all code and data used in our experiments.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f172dac7",
    "metadata": {
@@ -44,17 +47,18 @@
    "source": [
     "## What Is A Token In Machine Learning?\n",
     "\n",
-    "- A token is a sequence of characters that is considered as a single entity during processing. \n",
+    "- A token is a sequence of characters that is considered as a single entity during processing.\n",
     "- Tokens are usually derived from words, but they can also be derived from subwords, characters, or even bytes.\n",
     "- For example, the sentence \"The quick brown fox jumps over the lazy dog\" can be tokenized into the following tokens: [\"The\", \"quick\", \"brown\", \"fox\", \"jumps\", \"over\", \"the\", \"lazy\", \"dog\"].\n",
     "- Some words can be tokenized into multiple tokens, for example, \"don't\" can be tokenized into [\"do\", \"n't\"].\n",
     "- At the byte or chracter level, the sentence can be tokenized into the 43 character tokens.\n",
     "- In transformer models, tokens are usually represented as vectors of fixed length, for example, 512-dimensional vectors to limit the cost of computation.\n",
     "- Attention mechanisms are expensive, and the cost of computation increases with the order of $N^2$ where $N$ is the number of tokens in the sequence.\n",
-    "- This explains why tokenization is important, it dramatically reduces the number of tokens in a sequence, and thus the cost of computation."
+    "- This explains why tokenization is important, it dramatically reduces the number of tokens in a sequence, and thus the cost of computation.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5b4ff30e",
    "metadata": {
@@ -71,10 +75,11 @@
     "- One advantage of token-free models is that they are more robust to noise.\n",
     "- Also, out-of-vocabulary words are not a problem for token-free models. It is `<UNK>`-free.\n",
     "- `<UNK>` is the token used to represent out-of-vocabulary words in token-based models.\n",
-    "- The proposed ByT5 is based on Google’s recent token-based mT5 (Massively Multilingual Text-to-Text Transfer Transformer)"
+    "- The proposed ByT5 is based on Google’s recent token-based mT5 (Massively Multilingual Text-to-Text Transfer Transformer)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9d3093de",
    "metadata": {
@@ -84,10 +89,11 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/byt5/byt5-vs-mt5.png)"
+    "![](figs/byt5-vs-mt5.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e4b25a93",
    "metadata": {
@@ -104,10 +110,11 @@
     "- The team then modifies the pretrained task such that instead of adding 100 new tokens for the sentinels, they reuse the final 100 byte IDs.\n",
     "- Rather than using an average span length of 3 subwords, they mask longer byte-spans with a mean length of 20 bytes.\n",
     "- They found that byte-level models with a heavier encoder perform better on both classification and generation tasks.\n",
-    "- They dropped any illegal bytes in the model's ouput to keep the output valid UTF-8."
+    "- They dropped any illegal bytes in the model's ouput to keep the output valid UTF-8.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e448bc1b",
    "metadata": {
@@ -125,10 +132,11 @@
     "- The decoder is given the missing tokens and the placeholder assigned to the content that is hidden to it.\n",
     "- Essentially, the encoder knows the content with the tokens missing and the decoder knows the missing tokens.\n",
     "- On training, accuracy is measured by how well the decoder can predict the missing tokens.\n",
-    "- Accuracy of 80% means that the decoder can predict 80% of the missing tokens correctly."
+    "- Accuracy of 80% means that the decoder can predict 80% of the missing tokens correctly.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f2687790",
    "metadata": {
@@ -138,10 +146,11 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/byt5/byt5-mc4.png)"
+    "![](figs/byt5-mc4.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "284e768a",
    "metadata": {
@@ -158,10 +167,11 @@
     "- There are five sizes of ByT5 models covering 100+ languages.\n",
     "- The prediction is that ByT5 will be better for tasks operating on shorter text sequences.\n",
     "- A marginally better model that takes 100x more time to train and run is not a good trade-off.\n",
-    "- ByT5 requires ~5x more tokens for the same text length compared to mT5."
+    "- ByT5 requires ~5x more tokens for the same text length compared to mT5.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bad49af8",
    "metadata": {
@@ -177,10 +187,11 @@
     "> “Second, we modify the pre-training task. mT5 uses the “span corruption” pre-training objective first proposed by Raffel et al. (2020) where spans of tokens in unlabeled text data are replaced with a single “sentinel” ID and the model must fill in the missing spans. Rather than adding 100 new tokens for the sentinels, we find it sufficient to reuse the final 100 byte IDs. While mT5 uses an average span length of 3 subword tokens, we find that masking longer byte-spans is valuable.”\n",
     "\n",
     "- mT5 replaces 3 tokens with a sentinel token.\n",
-    "- ByT5 replaces 20 bytes with a sentinel token."
+    "- ByT5 replaces 20 bytes with a sentinel token.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "242c9bee",
    "metadata": {
@@ -193,10 +204,11 @@
     "> “Third, we find that ByT5 performs best when we decouple the depth of the encoder and decoder transformer stacks. While T5 and mT5 used “balanced” architectures, we find byte-level models benefit significantly from a “heavier” encoder. Specifically, we set our encoder depth to 3 times that of the decoder.”\n",
     "\n",
     "- mT5 used balances architectures with the same number of layers in the encoder and decoder.\n",
-    "- ByT5 uses a heavier encoder with 3 times the number of layers as the decoder."
+    "- ByT5 uses a heavier encoder with 3 times the number of layers as the decoder.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5b602800",
    "metadata": {
@@ -214,10 +226,11 @@
     "- Vocabulary of mT5 takes up 85% ~ 16% of the model's parameters depending on the model size.\n",
     "- By switching to a byte-level model, the saved parameters can be used for other purposes, such as adding more layers or making the layers wider.\n",
     "\n",
-    "    ![](../figs/deep_nlp/byt5/byt5-vocab.png)"
+    "  ![](figs/byt5-vocab.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "186363fc",
    "metadata": {
@@ -234,11 +247,12 @@
     "- In terms of FLOPs (floating-point operations per second), ByT5 requires ~1.2x more operations for the pre-training.\n",
     "- On word-level tasks, ByT5 is fairly competitive with mT5.\n",
     "- On tasks with longer input sequences, the slowdown is more pronounced.\n",
-    "  \n",
-    "    ![](../figs/deep_nlp/byt5/byt5-flops-pretrain.png)"
+    "\n",
+    "  ![](figs/byt5-flops-pretrain.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c564a41",
    "metadata": {
@@ -250,10 +264,11 @@
    "source": [
     "## The Results\n",
     "\n",
-    "> “ByT5 is competitive with mT5 on standard English and multilingual NLP benchmarks and outperforms mT5 at small model sizes. Additionally ByT5 excels on free-form generation tasks and transliteration.”"
+    "> “ByT5 is competitive with mT5 on standard English and multilingual NLP benchmarks and outperforms mT5 at small model sizes. Additionally ByT5 excels on free-form generation tasks and transliteration.”\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1d7b7951",
    "metadata": {
@@ -263,14 +278,15 @@
     "tags": []
    },
    "source": [
-    "###  English Classification Tasks (GLUE, SuperGLUE)\n",
+    "### English Classification Tasks (GLUE, SuperGLUE)\n",
     "\n",
     "- ByT5 outperforms mT5 on small and base model sizes by sizable margins, and loses close battles on larger models.\n",
     "\n",
-    "    ![](../figs/deep_nlp/byt5/byt5-glue.png)"
+    "  ![](figs/byt5-glue.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4b216946",
    "metadata": {
@@ -285,10 +301,11 @@
     "- XSum gets the model to summarize a news article in a single sentence, and TweetQA is question answering from Tweets. DROP is a challenging reading comprehension task that requires numerical reasoning.\n",
     "- ByT5 outperforms mT5 on all three tasks across all model sizes.\n",
     "\n",
-    "    ![](../figs/deep_nlp/byt5/byt5-gen.png)"
+    "  ![](figs/byt5-gen.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "13f54be7",
    "metadata": {
@@ -305,10 +322,11 @@
     "- One might expect languages with rich inflectional morphology (e.g. Turkish) to benefit most from the move away from a fixed vocabulary.\n",
     "- Languages with a higher SentencePiece token compression rate (e.g. Thai and Telugu) tend to favor mT5, whereas those with a lower compression rate (e.g. Indonesian and Vietnamese) tend to favor ByT5.\n",
     "\n",
-    "    ![](../figs/deep_nlp/byt5/byt5-xling.png)"
+    "  ![](figs/byt5-xling.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6e854103",
    "metadata": {
@@ -323,7 +341,7 @@
     "- Unsurprisingly, “characteraware” models excel on tasks around word-internal phenonema.\n",
     "- These core NLP tasks have often been overlooked in evaluating general-purpose NLP models.\n",
     "\n",
-    "    ![](../figs/deep_nlp/byt5/byt5-word.png)"
+    "  ![](figs/byt5-word.png)\n"
    ]
   },
   {
@@ -349,6 +367,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1dac7ef1",
    "metadata": {
@@ -360,13 +379,14 @@
    "source": [
     "### Results\n",
     "\n",
-    "- Character-level models are more robust to real and synthetic noise than BPE or word-based models, across a range of morphological, syntactic and semantic tagging tasks. \n",
-    "- Token-free models are more robust to noise across many tasks. \n",
+    "- Character-level models are more robust to real and synthetic noise than BPE or word-based models, across a range of morphological, syntactic and semantic tagging tasks.\n",
+    "- Token-free models are more robust to noise across many tasks.\n",
     "\n",
-    "    ![](../figs/deep_nlp/byt5/byt5-noise.png)\n"
+    "  ![](figs/byt5-noise.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8fd9f6ae",
    "metadata": {
@@ -382,10 +402,11 @@
     "\n",
     "> “… the gains we observe with ByT5 are achieved despite the fact that the model is pretrained on 4 times less text than mT5. This suggests that byte-level models could be more data efficient learners.”\n",
     "\n",
-    "> “Our “hands-off” approach of feeding raw UTF-8 bytes directly into the transformer costs +33% pre-training time, as well as longer inference time (10–50% longer for small models, and 100–600% longer for our largest models). As such, there is significant room for improvement. We believe techniques such as hash embeddings, local attention and down-sampling (Clark et al., 2021), as well as sparse computation (Fedus et al., 2021) can help address latency issues, removing the remaining barriers to a token-free future.”"
+    "> “Our “hands-off” approach of feeding raw UTF-8 bytes directly into the transformer costs +33% pre-training time, as well as longer inference time (10–50% longer for small models, and 100–600% longer for our largest models). As such, there is significant room for improvement. We believe techniques such as hash embeddings, local attention and down-sampling (Clark et al., 2021), as well as sparse computation (Fedus et al., 2021) can help address latency issues, removing the remaining barriers to a token-free future.”\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d23f7557",
    "metadata": {
@@ -401,7 +422,7 @@
     "- Token-free models and token-based models can coexist, and the best model for a given task will be assigned based on the task’s characteristics.\n",
     "- Token-free models will likely dramatically enhance voice search technologies where noise is prevalent.\n",
     "- Token-free models could collect information from noisy environments and to more quickly learn new terms being used as shorthand, slang, or jargon, and even emojis.\n",
-    "- These information could be used to improve the performance of token-based models."
+    "- These information could be used to improve the performance of token-based models.\n"
    ]
   },
   {
