--- a/book/lectures/nlp_deep/plms.ipynb
+++ b/book/lectures/nlp_deep/plms.ipynb
@@ -100,7 +100,7 @@
     "\n",
     "For example, in the sentence \"I went to the [MASK] to deposit my [MASK]\", the model should predict \"bank\" for the first masked word and \"check\" for the second masked word. However, the model may predict \"bank\" for the first word and \"luggage\" for the second word because the model does not take into account the dependency between the masked words.\n",
     "\n",
-    "```{image} ../figs/deep_nlp/t5/t5-mask-patterns.png\n",
+    "```{image} figs/t5-mask-patterns.png\n",
     ":alt: t5-mask-patterns\n",
     ":width: 500px\n",
     ":align: center\n",
@@ -152,7 +152,7 @@
     "- **Decoder-only PLMs** (e.g. GPT-2, CTRL, etc.) only use the decoder to generate the output sequence. The encoder is not used. The decoder is trained to predict the next word in the sequence of words.\n",
     "- **Encoder-decoder PLMs** (e.g. T5, BART, MASS, etc.) use both the encoder and the decoder. The encoder is used to encode the input sequence into a vector representation. The decoder is used to generate the output sequence.\n",
     "\n",
-    "![](../figs/deep_nlp/t5/t5-structure.png)"
+    "![](figs/t5-structure.png)"
    ]
   },
   {
@@ -304,7 +304,7 @@
     "- T5: Text-to-Text Transfer Transformer\n",
     "- We have the separate lecture on T5. Please refer to the lecture on T5 for more details.\n",
     "\n",
-    "```{image} ../figs/deep_nlp/t5/t5-training.png\n",
+    "```{image} figs/t5-training.png\n",
     ":alt: t5-training\n",
     ":class: bg-primary mb-1\n",
     ":width: 400px\n",
